Prevent pollTitle class from running off screen

--- a/src/Pages/Poll/Poll.css
+++ b/src/Pages/Poll/Poll.css
@@ -31,6 +31,10 @@
 {
   text-align: center;
   margin-bottom: 20px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100%;
 }
 
 
